    kernel that are not supported anymore.

 -- Aurelien Jarno <aurel32@debian.org>  Sun, 10 May 2009 15:03:39 +0200

eglibc (2.9-13) unstable; urgency=low

  * debian/debhelper.in/nscd.init: fix return code when querying status
    and nscd is not running to comply with LSB.  Closes: #527883.
  * debian/debhelper.in/locales.config: don't use "echo -e".  Closes: 
    #527945.

 -- Aurelien Jarno <aurel32@debian.org>  Sat, 09 May 2009 20:56:18 +0200

eglibc (2.9-12) unstable; urgency=low

  [ Petr Salinger ]
  * kfreebsd/local-sysdeps.diff: update to revision 2503 (from glibc-bsd).

  [ Aurelien Jarno ]
  * any/local-revert-3270.diff: new patch to revert fix for PR nptl/3270.
    (closes: bug#527541).

 -- Aurelien Jarno <aurel32@debian.org>  Fri, 08 May 2009 11:57:16 +0200

eglibc (2.9-11) unstable; urgency=low

  * Switch to Embedded GLIBC (EGLIBC), sources taken from the 2.9
    branch.
    - Update all/submitted-readme-version.diff.
    - Update any/local-bashisms.diff.
    - Update any/cvs-bz9697-posix-regcomp.diff.
    - Update any/cvs-binutils_2.20.diff.
    - Drop any/local-makeconfig.diff.
    - Drop any/submitted-getcwd-sys_param_h.diff (merged in eglibc).
    - Add any/submitted-cross-zic.diff to fix biarch builds.
    - Add any/submitted-nss-nsswitch.diff to fix linuxthreads builds.
    - Add any/submitted-install-map-files.diff to fix GNU/Hurd builds.
    - More tests of flavour/biarch builds are run, update the expected
      testsuite results accordingly.
    - Rename glibc-source package into eglibc-source.

 -- Aurelien Jarno <aurel32@debian.org>  Tue, 05 May 2009 09:54:14 +0200

glibc (2.9-10) unstable; urgency=low

  [ Samuel Thibault ]
  * hurd-i386/local-pthread_posix-option.diff: Set _POSIX_TIMEOUTS to 200112
    too, to fix gthread compilation in gcc-4.4

  [ Petr Salinger ]
  * fix up GNU/kFreeBSD specific macro LIST_FOREACH_SAFE.
  
  [ Aurelien Jarno ]
  * any/cvs-broken-dns.diff: backport more parts from upstream.