@@ -13,6 +13,6 @@ locales dependencies on glibc
   If it's not, it is very likely that the corresponding libc has not been
   built _and_ uploaded to the mirrors for your architecture yet, and that the
   dependencies will be fixed soon. Please wait for the package to be installed
-  for more than 24 hours before reporting abug about `locales` dependencies.
+  for more than 24 hours before reporting a bug about `locales` dependencies.
 
   [1] http://buildd.debian.org/~jeroen/status/package.php?p=glibc
