@@ -48,12 +48,11 @@ if [ -e /etc/locale.gen ]; then
     db_set locales/locales_to_be_generated "$SELECTED_LOCALES"
 fi
 
-DEFAULT_ENVIRONMENT="$(cat /etc/environment /etc/default/locale 2>/dev/null | awk 'BEGIN {lang="None"} /^LANG=/ {gsub("\"", ""); sub("LANG=", ""); lang=$0;} END {print lang}')"
+DEFAULT_ENVIRONMENT="$(cat /etc/environment /etc/default/locale 2>/dev/null | awk '/^LANG=/ {gsub("\"", ""); sub("LANG=", ""); lang=$0;} END {print lang}')"
 DEFAULT_ENVIRONMENT="$(convert_locale "$DEFAULT_ENVIRONMENT")"
 if ! echo "$SUPPORTED_LOCALES" | grep -q -e "\b$DEFAULT_ENVIRONMENT\b" ; then
-    DEFAULT_ENVIRONMENT="None"
+    db_set locales/default_environment_locale "$DEFAULT_ENVIRONMENT"
 fi
-db_set locales/default_environment_locale "$DEFAULT_ENVIRONMENT"
 
 STATE=1
 while [ "$STATE" -ge 0 ]; do
