@@ -38,9 +38,9 @@ to have this locale generated:
 .IP 
 % validlocale de_AU@euro
 .br 
-locale 'de_AT@euro' not available
+locale 'de_AU@euro' not available
 .br 
-de_AT@euro ISO\-8859\-15
+de_AU@euro ISO\-8859\-15
 .SH "AUTHORS"
 .LP 
 Petter Reinholdtsen <pere@hungry.com>
