@@ -31,6 +31,14 @@
  en_ZA.UTF-8/UTF-8 \
  en_ZA/ISO-8859-1 \
  en_ZW.UTF-8/UTF-8 \
+@@ -252,6 +254,7 @@ ka_GE.UTF-8/UTF-8 \
+ ka_GE/GEORGIAN-PS \
+ kk_KZ.UTF-8/UTF-8 \
+ kk_KZ/PT154 \
++kk_KZ RK1048 \
+ kl_GL.UTF-8/UTF-8 \
+ kl_GL/ISO-8859-1 \
+ km_KH/UTF-8 \
 @@ -326,6 +328,7 @@
  ru_RU.UTF-8/UTF-8 \
  ru_RU.KOI8-R/KOI8-R \
